# kancolle-item-improvement-spider

./: .gitignore  CHANGELOG.md  DATA_SCHEMA.md  PUBLIC-CONTENT-MANIFEST.json  README.md  STABLE-CONTENT-MANIFEST.json
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/: PUBLIC-CONTENT-MANIFEST.json  pyproject.toml
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/.github/workflows/: data-build.yml
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/automation/compute/: cli.py  source_resolver.py
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/automation/release/: cli.py  npm_registry.py
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/docs/public/: ARCHITECTURE.md
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/service/data_package/: equipment_acquisition_raw_parse.py  equipment_acquisition_snapshot.py  equipment_development.py
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/service/source_validation/: ai_review.py
.flow/state/release-transactions/1.0.24-878325a5a9e7/candidate/public/util/start2/: start2_item_utils.py
.flow/state/transactions/20260713T110557890343Z/backup/files/: RELEASE-NOTES.md  pyproject.toml
.flow/state/transactions/20260713T110557890343Z/backup/files/.flow/: baseline.json
.flow/state/transactions/20260713T110557890343Z/backup/files/tests/: test_akashi_image_downloads.py  test_cache.py  test_consumer_identity.py  test_data_package.py  test_data_quality_gate.py  test_npm_release_set.py
(+4857 files in other folders)
