[project]
name = "kancolle-item-improvement-spider"
version = "1.0.24"
description = "Kancolle item improvement data spider"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "jaconv==0.5.0",
  "lxml==6.0.2",
  "playwright==1.61.0",
  "requests==2.32.5",
]

[tool.uv]
package = false
python-downloads = "never"
